fixed css layout break form the border added by the map click

--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,14 @@ nav img {
 .container-fluid {
   border: 1px solid lightgrey; }
 
-.highlightedArea {
-  border: 3px solid red; }
-
 .isHidden {
   display: none; }
+
+.mapGridBox {
+  border: 2px solid transparent; }
+
+.highlightedArea {
+  border: 2px solid red; }
 
 #grid1 {
   background-color: #730217; }
